Cmake_minimum_required(VERSION 3.13.4)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
	project(calc)
	find_package(LLVM_REQUIRED HINTS "${LLVM_CMAKE_PATH}")
	list(APPEND CMAKE_MODULE_PATH ${LLVM_DIR})
	include(AddLLVM)
	include(HandleLLVMOptions)
	include_directories("${LLVM_BINARY_DIR}/include"	"${LLVM_INCLUDE_DIR}")
	link_directories("${LLVM_LIBRARY_DIR}")
	set(CALC_BUILT_STANDALONE 1)
endif()
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR AND NOT MSVC_IDE)
	message(RATAL_ERROR "In-source builds are not allowed.")
endif()
set(CALC_VERSION_STRING "0.1")
include(AddCalc)
include_directories(BEFORE
	${CMAKE_CURRENT_BINARY_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}/include
	)
add_subdirectory(lib)
add_subdirectory(tools)
